wp-content/themes/kirkandkirk/resources/assets/styles/components/_two-column.scss
.two-column {
	@include section;

	padding: 0;

	@include breakpoint(medium) {
    padding: 35px 0;
	}

	&__inner {
		@include inner;

		display: flex;
		flex-wrap: wrap;
		justify-content: space-between;

		@include breakpoint(medium) {
			flex-wrap: nowrap;
		}
	}

	&__col {
		width: 100%;

		@include breakpoint(medium) {
			width: 45%;
		}
	}

	&__textarea {
		padding: 15px 0;

		@include breakpoint(medium) {
			padding: 0;
		}

		&.textarea-left {
			width: 100%;

			@include breakpoint(medium) {
				width: 85%;
			}
		}

			h1 {
				display: inline-block;
				font-family: $font--heading;
				font-weight: 100;
				font-size: 18px;
				letter-spacing: 2.73px;
			}

			h2 {
				display: inline-block;
				font-size: 17px;
				font-weight: 100;
			}
	}

	&__top-image {
		padding: 0;

		@include breakpoint(medium) {
			padding: 0 0 70px 0;
		}
	}

	&__bottom-container {
    display: flex;

		&.right {
			justify-content: flex-end;
		}

		&.left {
			justify-content: flex-start;
		}

		&.center {
			height: 100%;
			justify-content: center;
			vertical-align: middle;

			img {
				align-self: center;
			}
		}

		img {
			max-width: initial;
			width: 100%;
			height: 100%;
			padding: 0 0 40px 0;

			@include breakpoint(medium) {
				max-width: 60%;
				width: 100%;
				padding: 40px 0;
			}
		}
	}
}

